# mayday-nix

./: README.md  RUNME.sh  cfg.nix  configuration.nix  flake.nix  nix-ascii.txt  setup.sh
dotfiles/hyprland/: hyprland.conf
dotfiles/nix/: configuration.nix  flake.nix  variables.nix
dotfiles/scripts/: bashmap.sh  edit-dotfile.txt  update.sh
eou/: another-shitty-day-in-my-stupid-life.txt  pull-ghc.sh  rebuild.sh  script-map.sh  update.sh
hyprland/: hyprland.conf  master.conf
hyprland/binds/: base-inputs.conf  master.conf  tools.conf  workspace.conf
hyprland/cosmetics/: master.conf
hyprland/mako/: master
hyprland/rules/: autostart-apps.conf  float.conf  games.conf  gen-fixes.conf  low-battery.conf  master.conf  unity-fixes.conf
machines/: hw-cfg-medea.nix.deprecated  medea.nix  template.nix
modules/: base.nix  daily.nix  edc.nix  frame.nix  june.nix  services.nix  special.nix
nix/: configuration.nix  flake.nix  variables.nix
nix/machines/: atlas.nix  hw-cfg-atlas.nix  master.nix
nix/modules/: base.nix  cinnamon.nix  hyprland.nix  master.nix  media.nix  net.nix  tools.nix  variables.nix
nix/modules/oxide_timer/: Cargo.toml  default.nix  flake.nix  result
nix/modules/oxide_timer/src/client/: main.rs
nix/modules/oxide_timer/src/daemon/: main.rs
nixos/: configuration.nix
nixos/machines/: global.nix  machine_name.nix
nixos/modules/: edc.nix
scripts/: bashmap.sh  drpull.sh  drpush.sh  drs.sh  ews.sh  low-battery.sh  oxt-fix.sh  rebuild.sh  update.sh  ydh.sh
scripts/hyprland/: check-battery.sh  low-battery.sh
scripts/wip/: setup.txt
(+18 files in other folders)
